# django-autoslug-iplweb

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
autoslug/: __init__.py  fields.py  utils.py
autoslug/tests/: conftest.py  settings.py  settings_postgres.py  test_concurrency.py
docs/: conf.py
requirements/: docs-manual.txt
