[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-autoslug-iplweb"
version = "1.9.9"
description = "An automated slug field for Django."
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "GNU Lesser General Public License (LGPL), Version 3"}
authors = [
    {name = "Justin Mayer", email = "entrop@gmail.com"},
]
keywords = ["django", "field", "slug", "auto", "unique", "transliteration", "i18n"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "django>=3.2",
]

[project.optional-dependencies]
cyrillic = ["pytils>=0.2"]
translitcodec = ["translitcodec>=0.3"]
dev = [
    "coverage>=5.0.3",
    "django-modeltranslation>=0.10",
    "pytils>=0.2",
    "Unidecode>=0.04",
    "pytz",
    "bump-my-version>=0.28",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
]
docs = [
    "Sphinx>=7.0",
    "docutils>=0.7",
    "Pygments>=1.2",
]

[project.urls]
Homepage = "https://github.com/iplweb/django-autoslug-iplweb/"
Repository = "https://github.com/iplweb/django-autoslug-iplweb/"
Upstream = "https://github.com/justinmayer/django-autoslug/"

[tool.setuptools]
packages = ["autoslug"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "autoslug.tests.settings"
python_files = ["tests.py", "test_*.py"]

[tool.autopub]
project-name = "django-autoslug-iplweb"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
changelog-file = "CHANGELOG.rst"
changelog-header = "~~~~~~~~~"
version-strings = ["autoslug/__init__.py"]
tag-prefix = "v"
build-system = "setuptools"

[tool.bumpversion]
current_version = "1.9.9"
commit = true
tag = false
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?'
serialize = [
    "{major}.{minor}.{patch}-{release}",
    "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.release]
optional_value = "gamma"
values = ["dev", "gamma"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "autoslug/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"
